--- a/package.json
+++ b/package.json
@@ -7,24 +7,26 @@
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
+    "@vue/runtime-core": "^3.3.4",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "postcss": "^7.0.36",
     "sass": "^1.35.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
-    "vue": "^3.0.5",
-    "vue-router": "^4.0.10",
-    "vuex": "^4.0.2"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@sicons/antd": "^0.10.0",
     "@vicons/antd": "^0.10.0",
-    "@vitejs/plugin-vue": "^1.2.3",
-    "@vue/compiler-sfc": "^3.0.5",
-    "naive-ui": "^2.15.5",
+    "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/compiler-sfc": "^3.3.4",
+    "naive-ui": "^2.34.4",
     "typescript": "^4.3.2",
     "vfonts": "^0.1.0",
-    "vite": "^2.3.8",
+    "vite": "^4.4.7",
+    "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vue-tsc": "^0.0.24"
   }
 }
