--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
-VITE_API=/api
-VITE_API_MT=/mt
+VITE_API = /api
+VITE_API_MT = /mt
 VITE_API_MUSIC = /music
+VITE_API_PROXY = http://110.42.251.190:9856
