--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "name": "alger-music",
   "version": "0.0.0",
+  "main": "./app/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
     "es": "vite && electron .",
-    "eb": "vite build && electron-builder"
+    "eb": "vite build && electron-builder",
+    "start": "electron .",
+    "e:b": "electron-builder"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
@@ -31,6 +35,7 @@
     "typescript": "^4.3.2",
     "vfonts": "^0.1.0",
     "vite": "^4.4.7",
+    "vite-plugin-electron-builder": "^0.1.0",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
     "vue-tsc": "^0.0.24"
   }
