✨ feat: 添加快捷键和关闭提示以及最小化功能

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "es": "vite && electron .",
-    "start": "set NODE_ENV=production && electron .",
+    "start": "set NODE_ENV=development&&electron .",
     "e:b": "electron-builder --config ./electron.config.json",
     "eb": "vite build && e:b"
   },
