--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_API = http://110.42.251.190:9898
 VITE_API_MT = http://mt.myalger.top
-VITE_API_MUSIC = http://myalger.top:4000
+VITE_API_MUSIC = http://110.42.251.190:4100
 VITE_API_PROXY = http://110.42.251.190:9856
