--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@vue/runtime-core": "^3.3.4",
+    "@vueuse/core": "^10.7.1",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
+    "naive-ui": "^2.34.4",
     "postcss": "^7.0.36",
     "sass": "^1.35.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuex": "^4.1.0",
-    "naive-ui": "^2.34.4"
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@sicons/antd": "^0.10.0",
@@ -35,11 +36,11 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "typescript": "^4.3.2",
+    "unplugin-auto-import": "^0.17.2",
+    "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.1.0",
     "vite": "^4.4.7",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
-    "vue-tsc": "^0.0.24",
-    "unplugin-auto-import": "^0.17.2",
-    "unplugin-vue-components": "^0.26.0"
+    "vue-tsc": "^0.0.24"
   }
 }
