--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
     "es": "vite && electron .",
     "start": "set NODE_ENV=development&&electron .",
     "e:b": "electron-builder --config ./electron.config.json",
-    "eb": "vite build && e:b"
+    "eb": "vite build && e:b",
+    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0"
   },
   "dependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@vue/runtime-core": "^3.3.4",
     "@vueuse/core": "^10.7.1",
+    "@vueuse/electron": "^10.9.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
     "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
     "naive-ui": "^2.34.4",
     "postcss": "^7.0.36",
+    "remixicon": "^4.2.0",
     "sass": "^1.35.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "vue": "^3.3.4",
@@ -30,12 +33,22 @@
     "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@sicons/antd": "^0.10.0",
-    "@vicons/antd": "^0.10.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
+    "eslint-plugin-vue": "^9.21.1",
+    "eslint-plugin-vue-scoped-css": "^2.7.2",
+    "prettier": "^3.2.5",
     "typescript": "^4.3.2",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
