--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "es": "vite && electron .",
     "start": "set NODE_ENV=development&&electron .",
-    "sp": "electron .",
-    "e:b": "electron-builder --config ./electron.config.json",
-    "eb": "vite build && e:b",
-    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0"
+    "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
+    "b:win:x64": "electron-builder --config ./build/win64.json",
+    "b:win:x86": "electron-builder --config ./build/win32.json",
+    "b:win:arm": "electron-builder --config ./build/winarm64.json"
   },
   "dependencies": {
+    "electron-store": "^8.1.0"
+  },
+  "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@vue/runtime-core": "^3.3.4",
     "@vueuse/core": "^10.7.1",
     "@vueuse/electron": "^10.9.0",
     "autoprefixer": "^9.8.6",
     "axios": "^0.21.1",
-    "electron-store": "^8.1.0",
     "lodash": "^4.17.21",
     "naive-ui": "^2.34.4",
     "postcss": "^7.0.36",
@@ -31,15 +32,13 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
-    "vuex": "^4.1.0"
-  },
-  "devDependencies": {
+    "vuex": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "electron": "^30.0.6",
+    "electron": "^30.0.0",
     "electron-builder": "^24.13.0",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
