🌈 style: 添加gzip压缩配置

--- a/package.json
+++ b/package.json
@@ -19,25 +19,16 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
-    "@vue/runtime-core": "^3.3.4",
-    "@vueuse/core": "^10.7.1",
-    "@vueuse/electron": "^10.9.0",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
-    "lodash": "^4.17.21",
-    "naive-ui": "^2.34.4",
-    "postcss": "^7.0.36",
-    "remixicon": "^4.2.0",
-    "sass": "^1.35.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vuex": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vue/compiler-sfc": "^3.3.4",
     "@vue/eslint-config-typescript": "^12.0.0",
+    "@vue/runtime-core": "^3.3.4",
+    "@vueuse/core": "^10.7.1",
+    "@vueuse/electron": "^10.9.0",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
     "electron": "^30.0.0",
     "electron-builder": "^24.13.0",
     "eslint": "^8.56.0",
@@ -48,13 +39,23 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-vue": "^9.21.1",
     "eslint-plugin-vue-scoped-css": "^2.7.2",
+    "lodash": "^4.17.21",
+    "naive-ui": "^2.34.4",
+    "postcss": "^7.0.36",
     "prettier": "^3.2.5",
+    "remixicon": "^4.2.0",
+    "sass": "^1.35.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
     "typescript": "^4.3.2",
     "unplugin-auto-import": "^0.17.2",
     "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.1.0",
     "vite": "^4.4.7",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-devtools": "1.0.0-beta.5",
-    "vue-tsc": "^0.0.24"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "vue-tsc": "^0.0.24",
+    "vuex": "^4.1.0"
   }
 }
