--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alger-music",
-  "version": "1.5.1",
+  "version": "1.6.0",
   "description": "这是一个用于音乐播放的应用程序。",
   "author": "Alger <algerkc@qq.com>",
   "main": "app.js",
@@ -21,16 +21,16 @@
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vue/compiler-sfc": "^3.3.4",
-    "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/runtime-core": "^3.3.4",
-    "@vueuse/core": "^10.7.1",
-    "@vueuse/electron": "^10.9.0",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.21.1",
-    "electron": "^30.0.0",
-    "electron-builder": "^24.13.0",
+    "@vitejs/plugin-vue": "^5.1.3",
+    "@vue/compiler-sfc": "^3.5.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/runtime-core": "^3.5.0",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/electron": "^11.0.3",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
+    "electron": "^32.0.1",
+    "electron-builder": "^25.0.5",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -40,22 +40,22 @@
     "eslint-plugin-vue": "^9.21.1",
     "eslint-plugin-vue-scoped-css": "^2.7.2",
     "lodash": "^4.17.21",
-    "naive-ui": "^2.38.2",
-    "postcss": "^7.0.36",
-    "prettier": "^3.2.5",
+    "naive-ui": "^2.39.0",
+    "postcss": "^8.4.44",
+    "prettier": "^3.3.3",
     "remixicon": "^4.2.0",
-    "sass": "^1.35.2",
+    "sass": "^1.78.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4",
-    "typescript": "^4.3.2",
-    "unplugin-auto-import": "^0.17.2",
-    "unplugin-vue-components": "^0.26.0",
+    "typescript": "^5.5.4",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.4",
     "vfonts": "^0.1.0",
-    "vite": "^4.4.7",
+    "vite": "^5.4.3",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-vue-devtools": "1.0.0-beta.5",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.4",
-    "vue-tsc": "^0.0.24",
+    "vite-plugin-vue-devtools": "7.4.0",
+    "vue": "^3.5.0",
+    "vue-router": "^4.4.3",
+    "vue-tsc": "^2.1.4",
     "vuex": "^4.1.0"
   }
 }
