--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,9 @@
     "no-console": "off",
     "no-continue": "off",
     "no-restricted-syntax": "off",
+    "no-return-assign": "off",
+    "no-unused-expressions": "off",
+    "no-return-await": "off",
     "no-plusplus": "off",
     "no-param-reassign": "off",
     "no-shadow": "off",
