✨ feat: 添加减轻动画效果选项 添加indexdb方法

--- a/.eslintrc
+++ b/.eslintrc
@@ -129,7 +129,10 @@
         "prefer-const": "error", // ts provides better types with const
         "prefer-rest-params": "error", // ts provides better types with rest args over arguments
         "prefer-spread": "error", // ts transpiles spread to apply, so no need for manual apply
-        "valid-typeof": "off" // ts(2367)
+        "valid-typeof": "off", // ts(2367)
+        "consistent-return": "off",
+        "no-promise-executor-return": "off",
+        "prefer-promise-reject-errors": "off"
       }
     }
   ]
