--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   "main": "app.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "cross-env NODE_ENV=production vite build",
     "serve": "vite preview",
-    "start": "set NODE_ENV=development&&electron .",
+    "start": "cross-env NODE_ENV=development electron .",
     "lint": "eslint --ext .vue,.js,.jsx,.ts,.tsx ./ --max-warnings 0",
-    "b:win:x64": "electron-builder --config ./build/win64.json",
-    "b:win:x86": "electron-builder --config ./build/win32.json",
-    "b:win:arm": "electron-builder --config ./build/winarm64.json",
-    "b:mac": "electron-builder --config ./build/mac.json"
+    "b:win:x64": "cross-env NODE_ENV=production electron-builder --config ./build/win64.json",
+    "b:win:x86": "cross-env NODE_ENV=production electron-builder --config ./build/win32.json",
+    "b:win:arm": "cross-env NODE_ENV=production electron-builder --config ./build/winarm64.json",
+    "b:mac": "cross-env NODE_ENV=production electron-builder --config ./build/mac.json"
   },
   "dependencies": {
     "electron-store": "^8.1.0"
@@ -57,6 +57,7 @@
     "vue": "^3.5.0",
     "vue-router": "^4.4.3",
     "vue-tsc": "^2.1.4",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "cross-env": "^7.0.3"
   }
 }
