--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,12 @@
-VITE_API = /api
-VITE_API_MUSIC = /music
-VITE_API_PROXY = http://110.42.251.190:9856
+# 你的接口地址 (必填)
+VITE_API = ***
+# 音乐破解接口地址
+VITE_API_MUSIC = ***
+# 代理地址
+VITE_API_PROXY = ***
+
+
+# 本地运行代理地址
+VITE_API_PROXY = /api
+VITE_API_MUSIC_PROXY = /music
+VITE_API_PROXY_MUSIC = /music_proxy
