✨ feat: 优化播放 修改为howler 修复搜索导致播放无限卡顿问题（#15）
- 优化了整个项目的播放
- 去除audio
- 优化歌词页 歌词同步时间

fixes #15

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "b:win": "cross-env NODE_ENV=production npm run build && npm run b:win:x64 && npm run b:win:x86 && npm run b:win:arm"
   },
   "dependencies": {
-    "electron-store": "^8.1.0"
+    "@types/howler": "^2.2.12",
+    "electron-store": "^8.1.0",
+    "howler": "^2.2.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.4",
