✨ feat: 优化应用下载

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,7 @@
     ]
   },
   "rules": {
+    "no-nested-ternary": "off",
     "no-console": "off",
     "no-continue": "off",
     "no-restricted-syntax": "off",
