✨ feat: 添加 github action 自动 打包 发布

--- a/package.json
+++ b/package.json
@@ -84,6 +84,11 @@
   "build": {
     "appId": "com.alger.music",
     "productName": "AlgerMusicPlayer",
+    "publish": [{
+      "provider": "github",
+      "owner": "algerkong",
+      "repo": "AlgerMusicPlayer"
+    }],
     "mac": {
       "icon": "resources/icon.icns",
       "target": [
