✨ feat: 修改 github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,5 +58,8 @@ jobs:
             dist/*.exe
             dist/*.deb
             dist/*.AppImage
+            dist/latest*.yml
+            dist/latest-mac.yml
+            dist/latest-linux.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
