✨ feat: 修改 github action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
             dist/*.exe
             dist/*.deb
             dist/*.AppImage
-            dist/latest*.yml
+            dist/latest.yml
             dist/latest-mac.yml
             dist/latest-linux.yml
         env:
