--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,15 @@ jobs:
       # MacOS Build
       - name: Build MacOS
         if: matrix.os == 'macos-latest'
-        run: npm run build:mac
+        run: |
+          security create-keychain -p github_actions build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p github_actions build.keychain
+          security set-keychain-settings -t 3600 -u build.keychain
+          npm run build:mac
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_IDENTITY_AUTO_DISCOVERY: false
 
       # Windows Build
       - name: Build Windows
