--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tailwindcss/postcss7-compat": "^2.2.4",
     "@types/howler": "^2.2.12",
     "@types/node": "^20.14.8",
+    "@types/tinycolor2": "^1.4.6",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitejs/plugin-vue": "^5.0.5",
@@ -70,6 +71,7 @@
     "remixicon": "^4.2.0",
     "sass": "^1.82.0",
     "tailwindcss": "^3.4.15",
+    "tinycolor2": "^1.6.0",
     "typescript": "^5.5.2",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
