--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
     "font-list": "^1.5.1",
-    "netease-cloud-music-api-alger": "^4.25.0"
+    "netease-cloud-music-api-alger": "^4.25.0",
+    "vue-i18n": "9"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
