--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.0.22",
-    "vuex": "^4.1.0"
+    "vuex": "^4.1.0",
+    "tunajs": "^1.0.15"
   },
   "build": {
     "appId": "com.alger.music",
