🦄 refactor: 重构代码将 Vuex替换为 Pinia 集成 Pinia 状态管理

--- a/package.json
+++ b/package.json
@@ -68,21 +68,24 @@
     "lodash": "^4.17.21",
     "marked": "^15.0.7",
     "naive-ui": "^2.41.0",
-    "prettier": "^3.5.3",
-    "remixicon": "^4.6.0",
-    "sass": "^1.86.0",
+    "postcss": "^8.4.49",
+    "prettier": "^3.3.2",
+    "pinia": "^3.0.1",
+    "remixicon": "^4.2.0",
+    "sass": "^1.83.4",
     "tailwindcss": "^3.4.17",
     "tinycolor2": "^1.6.0",
     "tunajs": "^1.0.15",
-    "typescript": "^5.8.2",
-    "unplugin-auto-import": "^19.1.1",
-    "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.2",
+    "typescript": "^5.5.2",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.4",
+    "vfonts": "^0.1.0",
+    "vite": "^5.3.1",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-devtools": "7.7.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-tsc": "^2.2.8",
+    "vue-tsc": "^2.0.22",
     "vuex": "^4.1.0"
   },
   "build": {
