🔧 feat: 更新依赖版本 修复类型错误 优化首页推荐样式

--- a/package.json
+++ b/package.json
@@ -21,41 +21,40 @@
     "build:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
-    "@electron-toolkit/preload": "^3.0.1",
-    "@electron-toolkit/utils": "^4.0.0",
+    "@electron-toolkit/preload": "^3.0.0",
+    "@electron-toolkit/utils": "^3.0.0",
     "@unblockneteasemusic/server": "^0.27.8-patch.1",
-    "electron-store": "^8.1.1",
+    "electron-store": "^8.1.0",
     "electron-updater": "^6.1.7",
     "font-list": "^1.5.1",
     "netease-cloud-music-api-alger": "^4.25.0",
-    "vue-i18n": "11.1.2"
+    "vue-i18n": "9"
   },
   "devDependencies": {
-    "@tailwindcss/vite": "^4.0.14",
     "@electron-toolkit/eslint-config": "^1.0.2",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@rushstack/eslint-patch": "^1.10.3",
     "@tailwindcss/postcss7-compat": "^2.2.4",
-    "@typescript-eslint/eslint-plugin": "^8.26.1",
-    "@typescript-eslint/parser": "^8.26.1",
-    "@vue/eslint-config-typescript": "^13.0.0",
     "@types/howler": "^2.2.12",
     "@types/node": "^20.14.8",
     "@types/tinycolor2": "^1.4.6",
-    "@vitejs/plugin-vue": "^5.2.3",
-    "@vue/compiler-sfc": "^3.5.13",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/compiler-sfc": "^3.5.0",
     "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/runtime-core": "^3.5.13",
-    "@vueuse/core": "^13.0.0",
-    "@vueuse/electron": "^13.0.0",
+    "@vue/eslint-config-typescript": "^13.0.0",
+    "@vue/runtime-core": "^3.5.0",
+    "@vueuse/core": "^11.0.3",
+    "@vueuse/electron": "^11.0.3",
     "animate.css": "^4.1.1",
-    "axios": "^1.8.3",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "cross-env": "^7.0.3",
-    "electron": "^34.0.0",
+    "electron": "^35.0.2",
     "electron-builder": "^25.1.8",
-    "electron-vite": "3.0.0",
+    "electron-vite": "^3.0.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
@@ -66,27 +65,25 @@
     "eslint-plugin-vue-scoped-css": "^2.7.2",
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
-    "marked": "^15.0.7",
+    "marked": "^15.0.4",
     "naive-ui": "^2.41.0",
-    "postcss": "^8.4.49",
-    "prettier": "^3.3.2",
     "pinia": "^3.0.1",
-    "remixicon": "^4.2.0",
-    "sass": "^1.83.4",
+    "postcss": "^8.5.3",
+    "prettier": "^3.3.2",
+    "remixicon": "^4.6.0",
+    "sass": "^1.86.0",
     "tailwindcss": "^3.4.17",
     "tinycolor2": "^1.6.0",
     "tunajs": "^1.0.15",
     "typescript": "^5.5.2",
-    "unplugin-auto-import": "^0.18.2",
-    "unplugin-vue-components": "^0.27.4",
-    "vfonts": "^0.1.0",
-    "vite": "^5.3.1",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
+    "vite": "^6.2.2",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vue-devtools": "7.7.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue-tsc": "^2.0.22",
-    "vuex": "^4.1.0"
+    "vue-tsc": "^2.0.22"
   },
   "build": {
     "appId": "com.alger.music",
