✨ feat: 歌曲下载内置封面歌词歌曲信息等，添加无限制下载功能，优化下载管理，支持清空下载记录

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "electron-updater": "^6.1.7",
     "font-list": "^1.5.1",
     "netease-cloud-music-api-alger": "^4.26.1",
+    "node-id3": "^0.2.9",
     "vue-i18n": "9"
   },
   "devDependencies": {
