✨ feat: 添加远程控制功能，支持远程控制音乐播放操作

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^4.0.0",
     "@unblockneteasemusic/server": "^0.27.8-patch.1",
+    "cors": "^2.8.5",
     "electron-store": "^8.1.0",
+    "express": "^4.18.2",
     "electron-updater": "^6.6.2",
     "font-list": "^1.5.1",
     "netease-cloud-music-api-alger": "^4.26.1",
@@ -54,7 +56,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "cross-env": "^7.0.3",
-    "electron": "^35.2.0",
+    "electron": "^36.0.0",
     "electron-builder": "^25.1.8",
     "electron-vite": "^3.1.0",
     "eslint": "^9.0.0",
