✨ feat: 添加额外资源配置，优化远程控制页面HTML路径获取逻辑

--- a/package.json
+++ b/package.json
@@ -99,6 +99,13 @@
         "repo": "AlgerMusicPlayer"
       }
     ],
+    "extraResources": [
+      {
+        "from": "resources/html",
+        "to": "html",
+        "filter": ["**/*"]
+      }
+    ],
     "mac": {
       "icon": "resources/icon.icns",
       "target": [
