🔧 chore: 更新部署工作流，将主分支名称从 dev_electron 修改为 main

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Web
 on:
   push:
     branches:
-      - dev_electron # 或者您的主分支名称
+      - main # 或者您的主分支名称
   workflow_dispatch: # 允许手动触发
 
 jobs:
