✨ feat: 增加对 arm64 架构的支持，修改 Windows 图标和安装程序图标为新资源

--- a/package.json
+++ b/package.json
@@ -130,13 +130,14 @@
       ]
     },
     "win": {
-      "icon": "resources/favicon.ico",
+      "icon": "resources/icon.ico",
       "target": [
         {
           "target": "nsis",
           "arch": [
             "x64",
-            "ia32"
+            "ia32",
+            "arm64"
           ]
         }
       ],
@@ -149,13 +150,15 @@
         {
           "target": "AppImage",
           "arch": [
-            "x64"
+            "x64",
+            "arm64"
           ]
         },
         {
           "target": "deb",
           "arch": [
-            "x64"
+            "x64",
+            "arm64"
           ]
         }
       ],
@@ -166,8 +169,8 @@
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true,
-      "installerIcon": "resources/favicon.ico",
-      "uninstallerIcon": "resources/favicon.ico",
+      "installerIcon": "resources/icon.ico",
+      "uninstallerIcon": "resources/icon.ico",
       "createDesktopShortcut": true,
       "createStartMenuShortcut": true,
       "shortcutName": "AlgerMusicPlayer",
