--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,9 @@
 # 你的接口地址 (必填)
-VITE_API_LOCAL = ***
-# 音乐破解接口地址
+VITE_API = http://127.0.0.1:30488
+# 音乐破解接口地址 web端
 VITE_API_MUSIC = ***
-# 代理地址
-VITE_API_PROXY = ***
 
 
 # 本地运行代理地址
-VITE_API_PROXY = /api
+VITE_API_LOCAL = /api
 VITE_API_MUSIC_PROXY = /music
-VITE_API_PROXY_MUSIC = /music_proxy
