feat: 添加主窗口自适应大小功能，页面缩放功能，支持缩放因子的调整和重置，并在搜索栏中提供缩放控制

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cors": "^2.8.5",
     "electron-store": "^8.1.0",
     "electron-updater": "^6.6.2",
+    "electron-window-state": "^5.0.3",
     "express": "^4.18.2",
     "font-list": "^1.5.1",
     "husky": "^9.1.7",
