--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "electron-updater": "^6.6.2",
     "electron-window-state": "^5.0.3",
     "express": "^4.18.2",
+    "file-type": "^21.0.0",
     "font-list": "^1.5.1",
     "husky": "^9.1.7",
+    "music-metadata": "^11.2.3",
     "netease-cloud-music-api-alger": "^4.26.1",
     "node-id3": "^0.2.9",
     "node-machine-id": "^1.1.12",
