✨ feat: 更新类型定义文件路径，移除旧的 auto-imports 和 components 定义文件

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ out
 resources/android/**/*
 
 .cursor
+
+.auto-imports.d.ts
+.components.d.ts
+
+src/renderer/auto-imports.d.ts
+src/renderer/components.d.ts
