✨ feat: 添加 linux rpm 构建目标支持

--- a/package.json
+++ b/package.json
@@ -168,6 +168,13 @@
             "x64",
             "arm64"
           ]
+        },
+        {
+          "target": "rpm",
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "artifactName": "${productName}-${version}-linux-${arch}.${ext}",
