modified:   .github/dependabot.yml 	modified:   .github/workflows/build.yml 	modified:   .github/workflows/deploy.yml 	modified:   electron-builder.yml 	modified:   resources/html/remote-control.html 	modified:   src/main/index.ts 	modified:   src/main/modules/fileManager.ts 	modified:   src/main/modules/tray.ts 	modified:   src/main/set.json

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-          
+
       - name: 创建环境变量文件
         run: |
           echo "VITE_API=${{ secrets.VITE_API }}" > .env.production.local
@@ -37,7 +37,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.DEPLOY_KEY }}
-          source: "out/renderer/*"
+          source: 'out/renderer/*'
           target: ${{ secrets.DEPLOY_PATH }}
           strip_components: 2
 
