--- a/src/renderer/.env.development
+++ b/src/renderer/.env.development
@@ -1,4 +1,5 @@
 # 你的接口地址 (必填)
 VITE_API = http://127.0.0.1:13000
 # 音乐破解接口地址 web端
-VITE_API_MUSIC = ***
+VITE_API_MUSIC = http://127.0.0.1:14000
+#VITE_API_MUSIC = http://music.alger.fun/music_proxy
