modified:   src/renderer/.env.development 	modified:   src/renderer/api/music.ts 	modified:   src/renderer/store/modules/settings.ts 	modified:   src/renderer/utils/request_music.ts
	modified:   src/renderer/api/music.ts
	modified:   src/renderer/store/modules/settings.ts
	modified:   src/renderer/utils/request_music.ts

--- a/src/renderer/.env.development
+++ b/src/renderer/.env.development
@@ -2,4 +2,5 @@
 VITE_API = http://127.0.0.1:13000
 # 音乐破解接口地址 web端
 VITE_API_MUSIC = http://127.0.0.1:14000
+VITE_API_MUSIC_BACKUP= http://music.alger.fun/music_proxy
 #VITE_API_MUSIC = http://music.alger.fun/music_proxy
