feat: Flac metadata and optimize cover images

--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "electron-window-state": "^5.0.3",
     "express": "^4.18.2",
     "file-type": "^21.0.0",
+    "flac-tagger": "^1.0.7",
     "font-list": "^1.5.1",
     "husky": "^9.1.7",
     "music-metadata": "^11.2.3",
     "netease-cloud-music-api-alger": "^4.26.1",
     "node-id3": "^0.2.9",
     "node-machine-id": "^1.1.12",
+    "sharp": "^0.34.3",
     "vue-i18n": "^11.1.3"
   },
   "devDependencies": {
