--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "homepage": "https://github.com/algerkong/AlgerMusicPlayer",
   "scripts": {
     "prepare": "husky",
-    "format": "prettier --write .",
-    "lint": "eslint . --fix",
+    "format": "prettier --write ./src",
+    "lint": "eslint ./src --fix",
     "typecheck:node": "tsc --noEmit -p tsconfig.node.json --composite false",
     "typecheck:web": "vue-tsc --noEmit -p tsconfig.web.json --composite false",
     "typecheck": "npm run typecheck:node && npm run typecheck:web",
@@ -21,6 +21,14 @@
     "build:win": "npm run build && electron-builder --win",
     "build:mac": "npm run build && electron-builder --mac",
     "build:linux": "npm run build && electron-builder --linux"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,vue,js}": [
+      "eslint --fix"
+    ],
+    "*.{ts,tsx,vue,js,css,scss,md,json}": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
     "@electron-toolkit/preload": "^3.0.1",
@@ -76,6 +84,7 @@
     "eslint-plugin-vue": "^10.3.0",
     "eslint-plugin-vue-scoped-css": "^2.11.0",
     "globals": "^16.3.0",
+    "lint-staged": "^15.2.10",
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
     "marked": "^15.0.4",
