--- a/package.json
+++ b/package.json
@@ -56,7 +56,6 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@eslint/js": "^9.31.0",
     "@rushstack/eslint-patch": "^1.10.3",
-
     "@types/howler": "^2.2.12",
     "@types/node": "^20.14.8",
     "@types/tinycolor2": "^1.4.6",
@@ -204,5 +203,11 @@
       "shortcutName": "AlgerMusicPlayer",
       "include": "build/installer.nsh"
     }
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "esbuild"
+    ]
   }
 }
